# devcaminhante-paste

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
src/: main.rs  paste_id.rs
upload/: coU
