[package]
name = "devcaminhante-paste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rand = "0.8"
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-persist = "0.35.2"
serde = { version = "1.0", features = ["derive"] }
